add apispec update
