# src/controllers/v3/openapi.yaml
@@ -478,6 +478,8 @@ components:
             additionalProperties: false
         OrgAccessRequestCreateInput:
             properties:
+                org:
+                    type: string
                 orgMemberId:
                     type: string
                 userId:
@@ -496,7 +498,6 @@ components:
                     type: array
             required:
                 - orgMemberId
-                - userId
                 - consumerProductEnvAppId
                 - providerProductEnvAppId
                 - businessProcess
@@ -632,6 +633,12 @@ components:
                     type: string
                 enabled:
                     type: boolean
+                permDataPlane:
+                    type: string
+                permDomains:
+                    items:
+                        type: string
+                    type: array
                 updatedAt:
                     type: number
                     format: double
@@ -639,6 +646,8 @@ components:
                 - name
                 - orgUnit
                 - enabled
+                - permDataPlane
+                - permDomains
                 - updatedAt
             type: object
             additionalProperties: false
@@ -656,11 +665,20 @@ components:
                     type: string
             type: object
             additionalProperties: false
+        OrgAPISpecCreateInput:
+            properties:
+                productEnvAppId:
+                    type: string
+                specUrl:
+                    type: string
+            required:
+                - productEnvAppId
+                - specUrl
+            type: object
+            additionalProperties: false
         DraftDatasetRefID:
             type: string
         LegalRefID:
-            type: string
-        BlobRefID:
             type: string
         CredentialIssuerRefID:
             type: string
@@ -698,8 +716,6 @@ components:
                     type: array
                 legal:
                     $ref: '#/components/schemas/LegalRefID'
-                spec:
-                    $ref: '#/components/schemas/BlobRefID'
                 credentialIssuer:
                     $ref: '#/components/schemas/CredentialIssuerRefID'
             type: object
@@ -1274,7 +1290,13 @@ paths:
                 -
                     jwt:
                         - Gateway.Config
-            parameters: []
+            parameters:
+                -
+                    in: path
+                    name: gatewayId
+                    required: true
+                    schema:
+                        type: string
             requestBody:
                 required: true
                 content:
@@ -1444,7 +1466,7 @@ paths:
             description: "Get Access Requests that are available by API for this organization\n> `Required Scope:` Namespace.Assign"
             summary: 'Get Organization Access Requests'
             tags:
-                - 'API Directory (Administration)'
+                - Organizations
             security:
                 -
                     jwt:
@@ -1464,11 +1486,15 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/OrgAccessRequest'
+                                properties:
+                                    id: {type: string}
+                                required:
+                                    - id
+                                type: object
             description: "Manage Access Requests for APIs that will appear on the API Directory\n> `Required Scope:` Namespace.Assign"
             summary: 'Manage Access Requests'
             tags:
-                - 'API Directory (Administration)'
+                - Organizations
             security:
                 -
                     jwt:
@@ -1486,6 +1512,37 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/OrgAccessRequestCreateInput'
+    '/organizations/{org}/access_requests/{id}':
+        delete:
+            operationId: organization-delete-access-request
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                properties: {}
+                                type: object
+            description: "Delete Access Request\n> `Required Scope:` Namespace.Assign"
+            tags:
+                - Organizations
+            security:
+                -
+                    jwt:
+                        - Namespace.Assign
+            parameters:
+                -
+                    in: path
+                    name: org
+                    required: true
+                    schema:
+                        type: string
+                -
+                    in: path
+                    name: id
+                    required: true
+                    schema:
+                        type: string
     /organizations:
         get:
             operationId: organization-list
@@ -1808,6 +1865,41 @@ paths:
                         default: 0
                         format: double
                         type: number
+    '/organizations/{org}/api_specs':
+        put:
+            operationId: organization-put-access-requests
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                properties:
+                                    id: {type: string}
+                                required:
+                                    - id
+                                type: object
+            description: "Update API Specification for a Product Environment\n> `Required Scope:` Namespace.Assign"
+            summary: 'Manage Access Requests'
+            tags:
+                - Organizations
+            security:
+                -
+                    jwt:
+                        - Namespace.Assign
+            parameters:
+                -
+                    in: path
+                    name: org
+                    required: true
+                    schema:
+                        type: string
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/OrgAPISpecCreateInput'
     '/organizations/{org}/products':
         get:
             operationId: organization-products
